syntax = "proto3";

option go_package = "github.com/XWS-2022-Tim12/Dislinkt/back/common/post";

package post;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service PostService{
        rpc Get(GetRequest) returns(GetResponse) {
        	option (google.api.http) = {
			get: "/post/{id}"
		};
        }
        rpc GetAll(GetAllRequest) returns(GetAllResponse) {
        	option (google.api.http) = {
			get: "/post/posts"
		};
        }
        rpc GetUserPosts(GetUserPostsRequest) returns(GetUserPostsResponse) {
                option (google.api.http) = {
			get: "/post/findUserPosts/{username}"
		};
        }
        rpc AddNewPost(AddNewPostRequest) returns(AddNewPostResponse) {
                option (google.api.http) = {
                        post: "/post/addPost"
                        body: "post"
                };
        }
        rpc LikePost(LikePostRequest) returns(LikePostResponse) {
                option (google.api.http) = {
                        put: "/post/likePost"
                        body: "post"
                };
        }
        rpc DislikePost(DislikePostRequest) returns(DislikePostResponse) {
                option (google.api.http) = {
                        put: "/post/dislikePost"
                        body: "post"
                };
        }
        rpc CommentPost(CommentPostRequest) returns(CommentPostResponse) {
                option (google.api.http) = {
                        put: "/post/commentPost"
                        body: "post"
                };
        }
}

message GetRequest {
        string id = 1;
}

message GetResponse {
        Post post = 1;
}

message GetAllRequest {
}

message GetAllResponse {
        repeated Post posts = 1;
}

message GetUserPostsRequest {
        string username = 1;
}

message GetUserPostsResponse {
        repeated Post posts = 1;
}

message AddNewPostRequest {
        Post post = 1;
}

message AddNewPostResponse {
        string success = 1;
}

message LikePostRequest {
        Post post = 1;
}

message LikePostResponse {
        string success = 1;
}

message DislikePostRequest {
        Post post = 1;
}

message DislikePostResponse {
        string success = 1;
}

message CommentPostRequest {
        Post post = 1;
}

message CommentPostResponse {
        string success = 1;
}

message Post {
        string id = 1;
        string text = 2;
        google.protobuf.Timestamp date = 3;
        int32 likes = 4;
        int32 dislikes = 5;
        repeated string comments = 6;
        string username = 7;
        string imageContent = 8;
}
